--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# audio I/O
+cpal = "0.15.2"
+# GUI
 eframe = "0.22.0"
+# image processing
 image = "0.24.7"
+# serialization
+serde = { version = "1.0.188", features = ["derive"] }
+# toml serialization
+toml = "0.8.0"
+
