--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,9 @@
 [network]
 name = "Etto48"
 port = 4848
-timeout_ms = 200
-ping_ms = 5000
+timeout_ms = 100
+ping_ms = 1000
 timeout_strikes = 10
 
 [voice]
+gain = 127
